@@ -3841,6 +3841,12 @@ declare global {
         readonly guestGenerationProbability: number;
 
         /**
+         * Spawns a new guest at a random peep spawn point.
+         * Note: The "guest.generation" hook will be called before this function returns.
+         */
+        generateGuest(): Guest;
+
+        /**
          * The average amount of cash guests will spawn with.
          */
         readonly guestInitialCash: number;
