@@ -49,6 +49,8 @@ namespace OpenRCT2::Scripting
 
         int32_t guestGenerationProbability_get() const;
 
+        DukValue generateGuest();
+
         money64 guestInitialCash_get() const;
 
         uint8_t guestInitialHappiness_get() const;
